--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,8 +5,8 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="card border border-light">
-                <div class="card-header bg-primary">
+            <div class="card border border-primary rounded bg-success">
+                <div class="card-header text-white bg-primary">
                     Order Here
                 </div>
                 <div class="card-body">
@@ -15,7 +15,7 @@
                             <label for="burger">What kind of burger would you like?</label>
                             <input type="text" class="form-control" id="burger-order">
                         </div>
-                        <buton class="btn btn-primary" type="submit">Place Order</buton>
+                        <buton class="btn btn-warning" type="submit">Place Order</buton>
                     </form>
                 </div>
             </div>
@@ -23,9 +23,13 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6">
-            <div class="card border border-light">
-                <div class="card-header bg-primary">
+        <br>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-6 mt-4">
+            <div class="card border border-primary">
+                <div class="card-header bg-primary text-white">
                     Ordered Burgers
                 </div>
                 <div class="card-body">
@@ -38,9 +42,9 @@
             </div>
         </div>
 
-        <div class="col-md-6">
-            <div class="card border border-light">
-                <div class="card-header">
+        <div class="col-md-6 mt-4">
+            <div class="card border border-primary" id="devoured-card">
+                <div class="card-header text-white bg-primary" id="devoured-card-header">
                     Burgers that have been devoured!
                 </div>
                 <div class="card-body">
