corrected issues with routes and paths in methods

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
                             <label for="burger">What kind of burger would you like?</label>
                             <input type="text" class="form-control" id="burger-order">
                         </div>
-                        <buton class="btn btn-warning" type="submit">Place Order</buton>
+                        <button class="btn btn-warning" type="submit">Place Order</buton>
                     </form>
                 </div>
             </div>
