--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <div class="mt-4">
     <h4>{{burger_name}}</h4>
 
-    <button class="change-devour btn btn-warning" data-id="{{id}}" data-newdevour="{{devour}}">
+    <button class="change-devour btn btn-warning" data-id="{{id}}" data-newdevour="{{devoured}}">
         Devour it!
     </button>
 </div>
