--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
                 <div class="card-header text-white bg-primary">
                     Order Here
                 </div>
-                <div class="card-body">
+                <div class="card-body order-form">
                     <form class="create-form">
                         <div class="form-group">
                             <label for="burger">What kind of burger would you like?</label>
@@ -28,11 +28,11 @@
 
     <div class="row mt-4">
         <div class="col-md-6 mt-4">
-            <div class="card border border-primary">
+            <div class="ordered-burgers card border border-primary rounded">
                 <div class="card-header bg-primary text-white">
                     Ordered Burgers
                 </div>
-                <div class="card-body">
+                <div class="card-body burger">
                     {{#each burgers}}
                       {{#unless devoured}}
                         {{> burgers/burger-block devour=false }}
@@ -43,11 +43,11 @@
         </div>
 
         <div class="col-md-6 mt-4">
-            <div class="card border border-primary" id="devoured-card">
+            <div class="card border border-primary rounded" id="devoured-card">
                 <div class="card-header text-white bg-primary" id="devoured-card-header">
                     Burgers that have been devoured!
                 </div>
-                <div class="card-body">
+                <div class="card-body burger">
                     {{#each burgers}}
                       {{#if devoured}}
                         {{> burgers/burger-devoured devour=true}}
