--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="card border border-primary rounded bg-success">
+            <div class="card border border-primary bg-success">
                 <div class="card-header text-white bg-primary">
                     Order Here
                 </div>
@@ -15,7 +15,7 @@
                             <label for="burger">What kind of burger would you like?</label>
                             <input type="text" class="form-control" id="burger-order">
                         </div>
-                        <button class="btn btn-warning" type="submit">Place Order</buton>
+                        <button class="btn btn-warning" type="submit"><i class="fas fa-concierge-bell"></i> Place Order</buton>
                     </form>
                 </div>
             </div>
@@ -28,7 +28,7 @@
 
     <div class="row mt-4">
         <div class="col-md-6 mt-4">
-            <div class="ordered-burgers card border border-primary rounded">
+            <div class="ordered-burgers card border border-primary">
                 <div class="card-header bg-primary text-white">
                     Ordered Burgers
                 </div>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="col-md-6 mt-4">
-            <div class="card border border-primary rounded" id="devoured-card">
+            <div class="card border border-primary" id="devoured-card">
                 <div class="card-header text-white bg-primary" id="devoured-card-header">
                     Burgers that have been devoured!
                 </div>
