--- a/views/partials/burgers/burger-devoured.handlebars
+++ b/views/partials/burgers/burger-devoured.handlebars
@@ -1,5 +1,5 @@
 <div class="mt-4">
     <h4 class="devoured-burger-name">{{burger_name}}</h4>
 
-    <button class="delete-burger btn btn-primary" data-id="{{this.id}}">Clean Plate</button>
+    <button class="delete-burger btn btn-primary" data-id="{{this.id}}"><i class="fas fa-sink"></i>Clean Plate!</button>
 </div>
